user html and registration html

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -27,4 +27,6 @@
             {{ form.submit() }}
         </p>
     </form>
+    <p>New user? <a href="{{ url_for('register') }}">
+    Click to register </a></p>
     {% endblock %}
