--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -16,9 +16,14 @@
             <a href = "/index">
             Home
             </a>
+            {% if current_user.is_anonymous %}
             <a href = "/login">
             Login
             </a>
+            {% else %}
+            <a href = "{{ url_for('user', username = current_user.username) }}">Profile</a>
+            <a href="{{ url_for('logout') }}">Logout</a>
+            {% endif %}
         </div>
         <hr>
         {% with messages = get_flashed_messages() %}
